--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -4,9 +4,34 @@
         <meta charset="utf-8">
         <title>Agenda</title>
         <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="ui fixed inverted menu">
+          <div class="ui container">
+            <a class="item">
+              <i class="home icon"></i> Home
+            </a>
+            <a class="item">
+              <i class="grid layout icon"></i> Browse
+            </a>
+            <a class="item">
+              <i class="mail icon"></i> Messages
+            </a>
+            <div class="ui simple dropdown item">
+              More
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <a class="item"><i class="edit icon"></i> Edit Profile</a>
+                <a class="item"><i class="globe icon"></i> Choose Language</a>
+                <a class="item"><i class="settings icon"></i> Account Settings</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ui main container">
             {% block content %}{% endblock %}
         </div>
     </body>
