--- a/resources/views/auth/signin.twig
+++ b/resources/views/auth/signin.twig
@@ -1,8 +1,8 @@
 {% extends 'templates/app.twig' %}
 
 {% block content %}
-<!-- <div class="ui three column centered grid">
-    <div class="column"> -->
+<div class="ui three column centered grid">
+    <div class="column">
         <div class="ui attached message">
             <div class="header">
                 Login
@@ -20,6 +20,6 @@
             <button class="ui primary button" type="submit">Entrar</button>
             <a class="ui button" href="{{ path_for("auth.signup") }}">Novo Usuário</a>
         </form>
-    <!-- </div>
-</div> -->
+    </div>
+</div>
 {% endblock %}
