--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Agenda</title>
-        <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
+        <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
+        <script type="text/javascript" src="{{ base_url() }}/js/app.js"></script>
     </head>
     <body>
         <div class="ui fixed inverted menu">
@@ -15,7 +16,7 @@
                     Teste Ditech
                 </div>
                 {% if auth.check %}
-                    <a class="item">
+                    <a class="item" href="{{ path_for("index") }}">
                       <i class="calendar icon"></i> Agenda
                     </a>
                     <a class="item">
@@ -35,7 +36,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="ui main container">
+        <div class="ui main fluid container">
             {% include 'templates/flash.twig' %}
             {% block content %}{% endblock %}
         </div>
