--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -19,7 +19,7 @@
                     <a class="item" href="{{ path_for("index") }}">
                       <i class="calendar icon"></i> Agenda
                     </a>
-                    <a class="item">
+                    <a class="item" href="{{ path_for("salas.listar") }}">
                       <i class="list icon"></i> Salas
                     </a>
                     <div class="right menu">
