--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Agenda</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
+        <link rel="stylesheet" href="{{ base_url() }}/css/semantic.min.css">
+        <script type="text/javascript" src="{{ base_url() }}/js/jquery.min.js"></script>
+        <script type="text/javascript" src="{{ base_url() }}/js/semantic.min.js"></script>
         <link rel="stylesheet" href="{{ base_url() }}/css/app.css">
         <script type="text/javascript" src="{{ base_url() }}/js/app.js"></script>
     </head>
